--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "gatsby": "^5.14.6",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
