--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "gatsby": "^5.14.6",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "motion": "^12.23.12",
